--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -4,5 +4,6 @@
     "titleBar.inactiveForeground": "#000000CC",
     "titleBar.activeBackground": "#FFC600",
     "titleBar.inactiveBackground": "#FFC600CC"
-  }
+  },
+  "C_Cpp.intelliSenseEngineFallback": "Enabled"
 }
