--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "waait": "^1.0.2"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "babel-jest": "^23.6.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "casual": "^1.5.19",
@@ -73,7 +74,8 @@
               "ssr": true,
               "displayName": true
             }
-          ]
+          ],
+          "@babel/plugin-proposal-optional-chaining"
         ]
       },
       "production": {
@@ -87,7 +89,8 @@
               "ssr": true,
               "displayName": true
             }
-          ]
+          ],
+          "@babel/plugin-proposal-optional-chaining"
         ]
       },
       "test": {
